--- a/css/Splash.css
+++ b/css/Splash.css
@@ -7,22 +7,17 @@ h1{
 .mission {
     align-items: center;
 }
-.mission-box{
-    display: flex;
-    align-self: center;
-    background: #0d6693;
-    justify-content: center;
-    align-items: center;
-    width: 75%;
-    min-height: 50vh;
-    margin: center;
-}
-.mission-box{
+.mission-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     backdrop-filter: blur(10px);
     border: solid 2px #FFFFFF11;
     border-radius: 10px;
     box-shadow: 0 0 25px 5px #000000FF;
     width: 75%;
-    margin: 10px;
+    max-width: 800px; /* added max-width for responsiveness */
+    min-height: 50vh;
     z-index: 1;
 }
