--- a/css/Splash.css
+++ b/css/Splash.css
@@ -9,7 +9,7 @@ h1{
 }
 .mission-box {
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     backdrop-filter: blur(10px);
@@ -17,7 +17,25 @@ h1{
     border-radius: 10px;
     box-shadow: 0 0 25px 5px #000000FF;
     width: 75%;
-    max-width: 800px; /* added max-width for responsiveness */
-    min-height: 50vh;
+    max-width: 1000px;
+    min-height: 250px;
+    z-index: 1;
+}
+.mission{
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: medium;
+}
+.developers {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    backdrop-filter: blur(10px);
+    border: solid 2px #FFFFFF11;
+    border-radius: 10px;
+    box-shadow: 0 0 25px 5px #000000FF;
+    width: 75%;
+    max-width: 1000px;
+    min-height: 250px;
     z-index: 1;
 }
