--- a/css/Splash.css
+++ b/css/Splash.css
@@ -27,6 +27,7 @@ h1{
 }
 .developers {
     position: absolute;
+    display: flex;
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -38,11 +39,14 @@ h1{
     max-width: 1000px;
     min-height: 250px;
     z-index: 1;
+    align-items: center;
 }
 
 .developers img{
     width: 200px;
     height: 200px;
-    display: inline;
-    align-items: center;
+    margin-top: 20px;
+}
+.developers h1{
+    margin-top: 0;
 }
