--- a/css/Splash.css
+++ b/css/Splash.css
@@ -42,7 +42,7 @@ h1{
     align-items: center;
 }
 
-.developers img{
+.developers svg,img{
     width: 200px;
     height: 200px;
     margin-left: auto;
@@ -56,7 +56,7 @@ h1{
     display: flex;
     margin-left: -55%;
 }
-.profile_image img {
+.profile_image img,svg {
     margin: 20px;    
 }
 .profile_image p{
