--- a/Life below water/style.css
+++ b/Life below water/style.css
@@ -79,7 +79,7 @@ header{
 }
 .search-box{
     position: absolute;
-    top: 100%;
+    top: -100%;
     left: 50%;
     transform: translate(-50%);
     background: var(--bg-);
@@ -87,6 +87,8 @@ header{
 }
 .search-box.active{
     top: 110%;
+    box-shadow: var(--box-shadow);
+    transition: 0.25s all linear;
 }
 .search-box input{
     padding: 20px;
@@ -134,6 +136,47 @@ header{
 .btn:hover{
     background: #8a6f4d;
 }
-.span{
-    color: #fff;
+.footer{
+    top: 0;
+    border: 3px solid black;
+    padding: 80px 50px;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+}
+
+.footernavbar ul{
+    float: inline-end;
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+}
+.footernavbar ul li a{
+    color: rgb(255, 255, 255);
+    margin: 20px;
+    text-decoration: none;
+    opacity: 0.7;
+    transition: 0.5s;
+}
+.footernavbar ul li a:hover{
+    opacity: 8;
+}
+
+.contentfooter{
+    color: rgb(13, 13, 13);
+    padding: 20px;
+    text-align:end;
+}
+.editor{
+    float: inline-end;
+    justify-content:center;
+    display: flex;
+}
+.editor a{
+    color: rgb(10, 10, 10);
+    padding: 20px;
+    opacity: 0.7;
+    text-decoration: none;
+}
+.editor a:hover{
+    opacity: 10;
 }
